[project]
name = "literaturesearch"
version = "0.1.0"
description = ""
authors = [
    {name = "rlesiyon",email = "lesiyonr@msu.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "metapub (>=0.6.4,<0.7.0)",
    "fire (>=0.7.1,<0.8.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "literaturesearch", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
